--- a/address.html
+++ b/address.html
@@ -2,36 +2,132 @@
 <html>
 <head>
   <title>Complete Profile</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Font Awesome (same as other pages) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+  <style>
+
+    .logo{
+      height:115px !important;
+    }
+
+    @media(max-width:768px){
+      .logo{
+        height:85px !important;
+      }
+    }
+
+    .profile-card{
+      width:100%;
+      max-width:420px;
+      text-align:center;
+    }
+
+    .input-field{
+      width:100%;
+      padding:12px;
+      margin-bottom:12px;
+      border-radius:12px;
+      border:none;
+      text-align:center;
+      font-size:14px;
+    }
+
+    .section-title{
+      margin-top:20px;
+      margin-bottom:10px;
+      font-size:16px;
+      opacity:.9;
+    }
+
+    /* MOBILE HEADER FIX */
+    @media(max-width:768px){
+
+      header{
+        flex-direction:column;
+        align-items:center;
+        text-align:center;
+        gap:15px;
+      }
+
+      nav{
+        flex-direction:column;
+        align-items:center;
+        width:100%;
+      }
+
+      nav button{
+        width:100%;
+        max-width:280px;
+      }
+
+    }
+
+    /* FOOTER MATCH */
+    .footer{
+      background:rgba(0,0,0,.55) !important;
+      padding:55px 20px 25px !important;
+    }
+
+    .footer-container{
+      display:flex !important;
+      justify-content:center !important;
+      gap:60px !important;
+      flex-wrap:wrap !important;
+      text-align:center !important;
+    }
+
+    .footer-container div{
+      min-width:220px !important;
+    }
+
+    @media(max-width:480px){
+      .footer-container{
+        flex-direction:column !important;
+        gap:30px !important;
+      }
+    }
+
+  </style>
 </head>
 
 <body>
 
+<!-- SAME HEADER STRUCTURE -->
 <header>
   <img src="assets/logo.png" class="logo" />
+
+  <nav>
+    <button onclick="window.location.href='index.html'">Home</button>
+    <button onclick="window.location.href='order.html'">Order</button>
+  </nav>
 </header>
 
 <main class="center">
-<div id="messageArea"></div>
 
-  <div class="card" style="width: 400px; max-width: 95%;">
+  <div id="messageArea" style="width:100%;max-width:420px;"></div>
+
+  <div class="card profile-card">
     <h2 style="margin-bottom:20px;">Complete Your Profile</h2>
 
     <input id="name" placeholder="Full Name" class="input-field">
     <input id="phone" placeholder="Phone Number" class="input-field">
 
-    <div style="margin-top:20px;">
-      <h4 style="margin-bottom:10px;">Delivery Address</h4>
-
-      <input id="house" placeholder="House / Flat" class="input-field">
-      <input id="street" placeholder="Street / Area" class="input-field">
-      <input id="city" placeholder="City" class="input-field">
-      <input id="pincode" placeholder="Pincode" class="input-field">
+    <div class="section-title">
+      Delivery Address
     </div>
+
+    <input id="house" placeholder="House / Flat" class="input-field">
+    <input id="street" placeholder="Street / Area" class="input-field">
+    <input id="city" placeholder="City" class="input-field">
+    <input id="pincode" placeholder="Pincode" class="input-field">
 
     <button class="primary-btn" style="margin-top:20px;" onclick="saveProfile()">
       Save & Continue
@@ -40,21 +136,56 @@
 
 </main>
 
+<!-- SAME FOOTER AS OTHER PAGES -->
+<footer class="footer">
+<div class="footer-container">
+
+<div>
+<h3>Aquahills Beverages</h3>
+<p>Pure & Safe Drinking Water</p>
+
+<div class="social-icons">
+<i class="fab fa-facebook-f"></i>
+<i class="fab fa-instagram"></i>
+<i class="fab fa-youtube"></i>
+<i class="fab fa-linkedin-in"></i>
+</div>
+</div>
+
+<div>
+<h4>Contact</h4>
+<p><i class="fa-solid fa-phone"></i> +91 9876543210</p>
+<p><i class="fa-solid fa-envelope"></i> support@aquahills.com</p>
+</div>
+
+<div>
+<h4>Location</h4>
+<p><i class="fa-solid fa-location-dot"></i> Ghaziabad, Uttar Pradesh</p>
+</div>
+
+</div>
+
+<p class="footer-bottom">
+© 2026 Aquahills Beverages | ISI & BIS Certified | All Rights Reserved
+</p>
+</footer>
+
 <script src="js/firebase.js"></script>
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
-const params = new URLSearchParams(window.location.search);
-if (params.get("incomplete") === "true") {
-  document.getElementById("messageArea").innerHTML = `
-    <div class="card" style="margin-bottom:20px; text-align:center;">
-      <h3 style="margin-bottom:10px;">Almost There</h3>
-      <p style="opacity:0.8;">
-        Please complete your delivery details so we can process your order.
-      </p>
-    </div>
-  `;
-}
+
+  const params = new URLSearchParams(window.location.search);
+  if (params.get("incomplete") === "true") {
+    document.getElementById("messageArea").innerHTML = `
+      <div class="card" style="margin-bottom:20px;text-align:center;">
+        <h3 style="margin-bottom:10px;">Almost There</h3>
+        <p style="opacity:0.8;">
+          Please complete your delivery details so we can process your order.
+        </p>
+      </div>
+    `;
+  }
 
   firebase.auth().onAuthStateChanged(async (user) => {
 
@@ -68,7 +199,6 @@ if (params.get("incomplete") === "true") {
 
     if (!data) return;
 
-    // Prefill existing values
     if (data.name) document.getElementById("name").value = data.name;
     if (data.phone) document.getElementById("phone").value = data.phone;
 
@@ -103,16 +233,6 @@ async function saveProfile() {
   window.location.href = "order.html";
 }
 </script>
-
-<style>
-.input-field {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 10px;
-  border: none;
-}
-</style>
 
 </body>
 </html>
