--- a/login.html
+++ b/login.html
@@ -53,9 +53,15 @@
 
     /* REAL GOOGLE SVG ICON */
     .google-icon{
-      width:22px;
-      height:22px;
-    }
+  width:24px;
+  height:24px;
+  display:block;
+  flex-shrink:0;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
+  shape-rendering: geometricPrecision;
+}
+
 
     @media(max-width:480px){
       .google-icon{
@@ -132,12 +138,15 @@
     <button class="google-btn" onclick="startGoogleLogin()">
 
       <!-- Official Google SVG -->
-      <svg class="google-icon" viewBox="0 0 48 48">
-        <path fill="#EA4335" d="M24 9.5c3.15 0 5.99 1.08 8.23 3.2l6.15-6.15C34.73 2.36 29.73 0 24 0 14.64 0 6.48 5.38 2.69 13.22l7.16 5.56C11.82 12.24 17.4 9.5 24 9.5z"/>
-        <path fill="#34A853" d="M46.1 24.5c0-1.63-.14-2.83-.43-4.08H24v7.72h12.68c-.26 2.06-1.66 5.16-4.77 7.24l7.35 5.72C43.93 36.62 46.1 31.06 46.1 24.5z"/>
-        <path fill="#4A90E2" d="M9.85 28.78A14.52 14.52 0 0 1 9.5 24c0-1.67.29-3.27.8-4.78l-7.16-5.56A23.98 23.98 0 0 0 0 24c0 3.87.93 7.52 2.69 10.78l7.16-6z"/>
-        <path fill="#FBBC05" d="M24 48c6.48 0 11.91-2.13 15.88-5.82l-7.35-5.72c-1.97 1.36-4.6 2.31-8.53 2.31-6.6 0-12.18-2.74-15.15-9.28l-7.16 6C6.48 42.62 14.64 48 24 48z"/>
-      </svg>
+      <svg class="google-icon" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+  <g>
+    <path fill="#EA4335" d="M24 9.5c3.15 0 5.99 1.08 8.23 3.2l6.15-6.15C34.73 2.36 29.73 0 24 0 14.64 0 6.48 5.38 2.69 13.22l7.16 5.56C11.82 12.24 17.4 9.5 24 9.5z"/>
+    <path fill="#34A853" d="M46.1 24.5c0-1.63-.14-2.83-.43-4.08H24v7.72h12.68c-.26 2.06-1.66 5.16-4.77 7.24l7.35 5.72C43.93 36.62 46.1 31.06 46.1 24.5z"/>
+    <path fill="#4A90E2" d="M9.85 28.78A14.52 14.52 0 0 1 9.5 24c0-1.67.29-3.27.8-4.78l-7.16-5.56A23.98 23.98 0 0 0 0 24c0 3.87.93 7.52 2.69 10.78l7.16-6z"/>
+    <path fill="#FBBC05" d="M24 48c6.48 0 11.91-2.13 15.88-5.82l-7.35-5.72c-1.97 1.36-4.6 2.31-8.53 2.31-6.6 0-12.18-2.74-15.15-9.28l-7.16 6C6.48 42.62 14.64 48 24 48z"/>
+  </g>
+</svg>
+
 
       <span>Continue with Google</span>
     </button>
