--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
 <style>
+.success-btn{
+padding:10px 22px;
+border-radius:35px;
+border:2px solid white;
+background:transparent;
+color:white;
+font-weight:600;
+cursor:pointer;
+transition:.3s ease;
+}
+
+.success-btn:hover{
+background:white;
+color:#0a5fd8;
+transform:scale(1.05);
+}
 
 /* Larger Logo */
 .logo{
