--- a/index.html
+++ b/index.html
@@ -280,37 +280,43 @@ Order Now
 </main>
 
 <footer class="footer">
-<div class="footer-container">
+  <div class="footer-container">
 
-<div>
-<h3>Aquahills Beverages</h3>
-<p>Pure & Safe Drinking Water</p>
+    <div class="footer-brand">
+      <h3>Aquahills Beverages</h3>
+      <p class="tagline">Pure & Safe Drinking Water</p>
 
-<div class="social-icons">
-<i class="fab fa-facebook-f"></i>
-<i class="fab fa-instagram"></i>
-<i class="fab fa-youtube"></i>
-<i class="fab fa-linkedin-in"></i>
-</div>
-</div>
+      <div class="social-icons">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-youtube"></i>
+        <i class="fab fa-linkedin-in"></i>
+      </div>
+    </div>
 
-<div>
-<h4>Contact</h4>
-<p><i class="fa-solid fa-phone"></i> +91 9876543210</p>
-<p><i class="fa-solid fa-envelope"></i> support@aquahills.com</p>
-</div>
+    <div class="footer-contact">
+      <h4>Contact Us</h4>
 
-<div>
-<h4>Location</h4>
-<p><i class="fa-solid fa-location-dot"></i> Ghaziabad, Uttar Pradesh</p>
-</div>
+      <p>
+        <i class="fa-solid fa-phone"></i>
+        <a href="tel:+919910657711">+91-9910657711</a>
+      </p>
 
-</div>
+      <p>
+        <i class="fa-solid fa-envelope"></i>
+        <a href="mailto:aquahillsbeverages@gmail.com">
+          aquahillsbeverages@gmail.com
+        </a>
+      </p>
+    </div>
 
-<p class="footer-bottom">
-© 2026 Aquahills Beverages | ISI & BIS Certified | All Rights Reserved
-</p>
+  </div>
+
+  <p class="footer-bottom">
+    © 2026 Aquahills Beverages | ISI & BIS Certified | All Rights Reserved
+  </p>
 </footer>
+
 
 <script src="js/firebase.js"></script>
 
