--- a/address.html
+++ b/address.html
@@ -71,23 +71,7 @@
     }
 
     /* FOOTER MATCH */
-    .footer{
-      background:rgba(0,0,0,.55) !important;
-      padding:55px 20px 25px !important;
-    }
-
-    .footer-container{
-      display:flex !important;
-      justify-content:center !important;
-      gap:60px !important;
-      flex-wrap:wrap !important;
-      text-align:center !important;
-    }
-
-    .footer-container div{
-      min-width:220px !important;
-    }
-
+    
     @media(max-width:480px){
       .footer-container{
         flex-direction:column !important;
@@ -169,7 +153,10 @@
         <i class="fa-solid fa-phone"></i>
         <a href="tel:+919910657711">+91-9910657711</a>
       </p>
-
+    <p>
+<i class="fa-solid fa-phone"></i>
+<a href="tel:+919911657711">+91-9911657711</a>
+</p> 
       <p>
         <i class="fa-solid fa-envelope"></i>
         <a href="mailto:aquahillsbeverages@gmail.com">
