--- a/orders.html
+++ b/orders.html
@@ -67,29 +67,7 @@
     }
 
     /* FOOTER MATCH */
-    .footer{
-      background:rgba(0,0,0,.55) !important;
-      padding:55px 20px 25px !important;
-    }
-
-    .footer-container{
-      display:flex !important;
-      justify-content:center !important;
-      gap:60px !important;
-      flex-wrap:wrap !important;
-      text-align:center !important;
-    }
-
-    .footer-container div{
-      min-width:220px !important;
-    }
-
-    @media(max-width:480px){
-      .footer-container{
-        flex-direction:column !important;
-        gap:30px !important;
-      }
-    }
+    
 
     /* MOBILE HEADER FIX */
     @media(max-width:768px){
@@ -133,36 +111,44 @@
 </main>
 
 <footer class="footer">
-<div class="footer-container">
+  <div class="footer-container">
 
-<div>
-<h3>Aquahills Beverages</h3>
-<p>Pure & Safe Drinking Water</p>
+    <div class="footer-brand">
+      <h3>Aquahills Beverages</h3>
+      <p class="tagline">Pure & Safe Drinking Water</p>
 
-<div class="social-icons">
-<i class="fab fa-facebook-f"></i>
-<i class="fab fa-instagram"></i>
-<i class="fab fa-youtube"></i>
-<i class="fab fa-linkedin-in"></i>
-</div>
-</div>
+      <div class="social-icons">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-youtube"></i>
+        <i class="fab fa-linkedin-in"></i>
+      </div>
+    </div>
 
-<div>
-<h4>Contact</h4>
-<p><i class="fa-solid fa-phone"></i> +91 9876543210</p>
-<p><i class="fa-solid fa-envelope"></i> support@aquahills.com</p>
-</div>
+    <div class="footer-contact">
+      <h4>Contact Us</h4>
 
-<div>
-<h4>Location</h4>
-<p><i class="fa-solid fa-location-dot"></i> Ghaziabad, Uttar Pradesh</p>
-</div>
+      <p>
+        <i class="fa-solid fa-phone"></i>
+        <a href="tel:+919910657711">+91-9910657711</a>
+      </p>
+    <p>
+<i class="fa-solid fa-phone"></i>
+<a href="tel:+919911657711">+91-9911657711</a>
+</p> 
+      <p>
+        <i class="fa-solid fa-envelope"></i>
+        <a href="mailto:aquahillsbeverages@gmail.com">
+          aquahillsbeverages@gmail.com
+        </a>
+      </p>
+    </div>
 
-</div>
+  </div>
 
-<p class="footer-bottom">
-© 2026 Aquahills Beverages | ISI & BIS Certified | All Rights Reserved
-</p>
+  <p class="footer-bottom">
+    © 2026 Aquahills Beverages | ISI & BIS Certified | All Rights Reserved
+  </p>
 </footer>
 
 <script src="js/firebase.js"></script>
