--- a/admin.html
+++ b/admin.html
@@ -190,18 +190,34 @@ text-align:center;
 
 .dashboard-grid{
 display:grid;
-grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:25px
+grid-template-columns:repeat(auto-fit,minmax(260px,420px));
+justify-content:center;
+gap:20px;
 }
+
 
 .stat{
 background:rgba(255,255,255,.2);
-padding:35px;
+padding:22px 20px;
 border-radius:18px;
 text-align:center;
 cursor:pointer;
-transition:.3s
+transition:.3s;
+max-width:420px;
+margin:auto;
 }
+
+.stat h2{
+font-size:32px;
+margin-bottom:8px;
+}
+
+.stat p{
+font-size:16px;
+font-weight:500;
+letter-spacing:0.5px;
+}
+
 
 .stat:hover{transform:translateY(-5px)}
 
