--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Order Now
       <p>
         <i class="fa-solid fa-envelope"></i>
         <a href="mailto:aquahillsbeverages@gmail.com">
-          aquahillsbeverages@gmail.com
+          support@aquahills.com
         </a>
       </p>
     </div>
