--- a/order.html
+++ b/order.html
@@ -153,7 +153,7 @@
       <p>
         <i class="fa-solid fa-envelope"></i>
         <a href="mailto:aquahillsbeverages@gmail.com">
-          aquahillsbeverages@gmail.com
+          support@aquahills.com
         </a>
       </p>
     </div>
