--- a/admin.html
+++ b/admin.html
@@ -786,87 +786,71 @@ async function loadSettings(){
 const doc = await db.collection("settings").doc("global").get()
 const price = doc.data()?.price || 75
 
-contentArea.innerHTML = `
+contentArea.innerHTML=`
 <div class="admin-card">
-<h2 style="margin-bottom:25px;">Bottle Pricing</h2>
+<h2>Bottle Pricing</h2>
 
-<div style="display:flex;justify-content:center;width:100%;">
+<div style="display:flex;gap:15px;margin-top:20px;justify-content:center;align-items:center;">
 
-<div style="
-display:flex;
-align-items:center;
-background:white;
-border-radius:40px;
-width:100%;
-max-width:380px;
-padding:5px;
-box-shadow:0 5px 20px rgba(0,0,0,.25);
-">
-
-<button 
-onclick="changeAdminPrice(1)"
+<button onclick="changeAdminPrice(-1)" 
 style="
-background:#28a745;
-color:white;
-border:none;
-width:50px;
-height:50px;
+width:40px;
+height:40px;
 border-radius:50%;
-font-size:22px;
-cursor:pointer;
-transition:.2s;
-"
-onmousedown="this.style.opacity='0.7'"
-onmouseup="this.style.opacity='1'"
-ontouchstart="this.style.opacity='0.7'"
-ontouchend="this.style.opacity='1'"
->
-+
-</button>
-
-<div style="
-flex:1;
-text-align:center;
-font-size:20px;
-font-weight:600;
-color:#062c5c;
-">
-₹ <span id="priceValue">${price}</span>
-</div>
-
-<button 
-onclick="changeAdminPrice(-1)"
-style="
+border:none;
 background:#dc3545;
 color:white;
-border:none;
-width:50px;
-height:50px;
-border-radius:50%;
-font-size:22px;
+font-size:18px;
 cursor:pointer;
-transition:.2s;
-"
-onmousedown="this.style.opacity='0.7'"
-onmouseup="this.style.opacity='1'"
-ontouchstart="this.style.opacity='0.7'"
-ontouchend="this.style.opacity='1'"
->
+">
 −
 </button>
 
+<div style="position:relative;width:200px;">
+<span style="
+position:absolute;
+left:15px;
+top:50%;
+transform:translateY(-50%);
+color:#062c5c;
+font-weight:600;
+">
+₹
+</span>
+
+<input 
+type="number" 
+id="priceInput" 
+value="${price}" 
+style="
+width:100%;
+padding-left:30px;
+"
+>
 </div>
 
-</div>
+<button onclick="changeAdminPrice(1)" 
+style="
+width:40px;
+height:40px;
+border-radius:50%;
+border:none;
+background:#28a745;
+color:white;
+font-size:18px;
+cursor:pointer;
+">
++
+</button>
 
-<div style="margin-top:25px;">
 <button class="theme-btn" onclick="savePrice()">
 Save
 </button>
-</div>
 
+</div>
 </div>`
 }
+
 
   
 function changeAdminPrice(change){
@@ -880,10 +864,8 @@ priceEl.innerText = current
 
 async function savePrice(){
 
-const newPrice = Number(document.getElementById("priceValue").innerText)
-
 await db.collection("settings").doc("global").update({
-price:newPrice
+price:Number(priceInput.value)
 })
 
 const card = document.querySelector(".admin-card")
