--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ Order Now
   </div>
 
   <p class="footer-bottom">
-    © 2026 Aquahills Beverages | ISI & BIS Certified | All Rights Reserved
+    © 2026 Aquahills Beverages | All Rights Reserved
   </p>
 </footer>
 
