--- a/address.html
+++ b/address.html
@@ -117,14 +117,24 @@
     <input id="pincode" placeholder="Pincode" class="input-field">
 
     <!-- GOOGLE MAP PINPOINT BUTTON -->
-<button type="button" class="primary-btn" 
+<button type="button"
+        class="primary-btn"
         style="margin-top:10px;background:#00b4ff;color:white;"
-        onclick="openGoogleMaps()">
+        onclick="detectAndSaveLocation()">
   <i class="fa-solid fa-location-dot"></i>
   Pinpoint Your Location
 </button>
 
 <input type="hidden" id="mapLink">
+
+<div id="locationStatus" style="
+  margin-top:10px;
+  font-size:14px;
+  opacity:0.9;
+  display:none;
+">
+</div>
+
 
 <div id="formError" style="
   margin-top:10px;
@@ -228,40 +238,43 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 
 });
-function openGoogleMaps() {
 
-  // Try to get current location first
-  if (navigator.geolocation) {
+function detectAndSaveLocation() {
 
-    navigator.geolocation.getCurrentPosition((position) => {
+  const statusDiv = document.getElementById("locationStatus");
+  statusDiv.style.display = "block";
+  statusDiv.innerText = "Detecting your location...";
+
+  if (!navigator.geolocation) {
+    statusDiv.innerText = "Geolocation is not supported on this device.";
+    return;
+  }
+
+  navigator.geolocation.getCurrentPosition(
+
+    (position) => {
 
       const lat = position.coords.latitude;
       const lng = position.coords.longitude;
 
       const mapUrl = `https://www.google.com/maps?q=${lat},${lng}`;
 
-      // Save link in hidden field
+      // Save automatically in hidden field
       document.getElementById("mapLink").value = mapUrl;
 
-      // Open Google Maps in new tab
-      window.open(mapUrl, "_blank");
+      statusDiv.innerText = "Location saved successfully ✔";
 
-    }, () => {
+    },
 
-      // If user denies location permission
-      const manualUrl = "https://www.google.com/maps";
-      window.open(manualUrl, "_blank");
+    () => {
+      statusDiv.innerText = "Unable to detect location. Please allow location permission.";
+    }
 
-    });
-
-  } else {
-    window.open("https://www.google.com/maps", "_blank");
-  }
-
+  );
 }
 
   
-async function saveProfile() {
+async function saveProfile() {async function saveProfile() {
 
   const user = firebase.auth().currentUser;
   if (!user) {
@@ -272,31 +285,46 @@ async function saveProfile() {
   const name = document.getElementById("name").value.trim();
   const phone = document.getElementById("phone").value.trim();
 
+  const house = document.getElementById("house").value.trim();
+  const street = document.getElementById("street").value.trim();
+  const city = document.getElementById("city").value.trim();
+  const pincode = document.getElementById("pincode").value.trim();
+  const mapLink = document.getElementById("mapLink").value;
+
   if (!phone) {
-  const errorDiv = document.getElementById("formError");
-  errorDiv.innerText = "Phone number is required.";
-  errorDiv.style.display = "block";
-  return;
-}
-document.getElementById("formError").style.display = "none";
+    const errorDiv = document.getElementById("formError");
+    errorDiv.innerText = "Phone number is required.";
+    errorDiv.style.display = "block";
+    return;
+  }
+
+  // Validation: either address OR mapLink required
+  if (!mapLink && (!house || !city || !pincode)) {
+    const errorDiv = document.getElementById("formError");
+    errorDiv.innerText = "Provide address details OR pinpoint your location.";
+    errorDiv.style.display = "block";
+    return;
+  }
+
+  document.getElementById("formError").style.display = "none";
 
   const updatedData = {
     name: name,
     phone: phone,
     address: {
-  house: document.getElementById("house").value,
-  street: document.getElementById("street").value,
-  city: document.getElementById("city").value,
-  pincode: document.getElementById("pincode").value,
-  mapLink: document.getElementById("mapLink").value || ""
-}
-
+      house: house,
+      street: street,
+      city: city,
+      pincode: pincode,
+      mapLink: mapLink || ""
+    }
   };
 
-  await db.collection("users").doc(user.uid).set(updatedData, { merge:true });
+  await db.collection("users").doc(user.uid).set(updatedData, { merge: true });
 
   window.location.href = "order.html";
 }
+
 
 </script>
 
